# circom_c_witness_generator

./: .gitignore  CMakeLists.txt  Makefile  README.md  witness_generator.sh
build_witnesscalc/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build_witnesscalc/src/: Makefile  circuit  cmake_install.cmake
circuit/multiply_cpp/: multiply.cpp
depends/gmp/package/lib/: libgmp.so.10.4.1
depends/gmp/package/lib/pkgconfig/: gmp.pc
example/: input.json
src/: CMakeLists.txt  circuit.circom  circuit.cpp
wtns_build/: circuit  input.json
